--- a/public/nav-bar.css
+++ b/public/nav-bar.css
@@ -42,10 +42,6 @@ header::after {
     border-bottom: 1px solid #575766;
 }
 
-li {
-   display: inline-block;
-}
-
 .site-nav li:last-child {
     border-bottom: none;
 }
@@ -53,7 +49,6 @@ li {
 .site-nav button {
     color: white;
     background-color: #2F5373;
-    /* display: block; */
     padding: 2em 4em 2em 1.5em;
     text-transform: uppercase;
     text-decoration: none;
@@ -67,13 +62,9 @@ li {
     color: #Ee836f;
 }
 
-.site-nav--icon {
+.nav-bar li {
     display: inline-block;
-    font-size: 1.5em;
-    margin-right: 1em;
-    width: 1.1em;
-    text-align: right;
-    color: rgba(255, 255, 255, .4);
+
 }
 
 .menu-toggle {
