--- a/public/recycleBin/nav-bar.css
+++ b/public/recycleBin/nav-bar.css
@@ -5,8 +5,7 @@
 }
 
 header {
-    background: #555151;
-    color: #EBEBD3;
+  
     padding: 1em 0;
     position: relative;
 }
@@ -22,15 +21,11 @@ header::after {
     top: 100%;
     right: 0%;
     background: #66C4D9;
-    clip-path: circle(0px at top right);
-    transition: clip-path ease-in-out 700ms;
-    /*   display: none; */
+
+
 }
 
-.site-nav--open {
-    clip-path: circle(250% at top right);
-    /*   display: block; */
-}
+
 
 .site-nav ul {
     margin: 0;
@@ -46,13 +41,17 @@ header::after {
     border-bottom: none;
 }
 
-.site-nav button {
-    color: white;
-    background-color: #2F5373;
-    padding: 2em 4em 2em 1.5em;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: none;
+.nav-bar {
+    float: right;
+    width: 100%;
+}
+
+.nav-bar button {
+   
+    /* background-color: #2F5373; */
+    background-color: black;
+    padding: .5em .7em;
+    font-family: 'Quicksand', sans-serif;
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
 }
