Changed intro, added tooltips to sign up form, css mobile is done.

--- a/public/main.css
+++ b/public/main.css
@@ -1,16 +1,17 @@
-
+/* https: //www.leewayautomation.com.au/wp-content/uploads/2018/07/access-control-img.jpg */
+/* https: //www.barcodescannermodule.com/photo/barcodescannermodule/editor/20170310112614_85818.png */
+/* "https://www.traka.com/presets/small/Other/trakacom/Images/Article4.jpg" */
 * {
     box-sizing: border-box;
 }
 
 body {
-    color: black;
-    background-image: url("https://www.traka.com/presets/small/Other/trakacom/Images/Article4.jpg");
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
-    font-family: 'Rubik', sans-serif;
+    /* font-family: 'Rubik', sans-serif; */
+    font-family: 'Noto Sans JP',
+    sans-serif;
     overflow: auto;
+    background-color: #fff6f6;
+    padding-bottom: 2em;
 }
 
 header {
@@ -19,65 +20,186 @@ header {
     /* font-family: 'Prosto One', cursive; */
     /* font-family: 'Viga', sans-serif; */
     font-family: 'Krona One', sans-serif;
-    background-color:black;
+    background-color: black;
 
 }
 
 main {
     max-width: 700px;
     margin: auto;
+
 }
+
+
+
+.img-container {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-family: 'Francois One',
+        sans-serif;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+.img-container .more-btn {
+    position: absolute;
+    bottom: 15%;
+    right: 12%;
+
+}
+
+.intro h1 {
+    position: absolute;
+    top: 0%;
+    font-size: 1.1em;
+    left: 2%;
+    width: 50%;
+    color: black;
+}
+
+p {
+    width: 70%;
+    margin: 1.5em auto;
+}
+
+
 
 h1 {
     text-transform: capitalize;
     margin: 0;
     font-size: 1.5em;
-        font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-.intro, footer, form {
+
+.intro,
+footer,
+form {
     min-width: 150px;
     width: 80%;
-  
     background-color: white;
-    opacity: .9;
     border-radius: 2px;
-    
     margin-left: auto;
     margin-right: auto;
 }
 
-.search-form {  
+footer {
+    text-align: center;
+    padding: 0 .6em;
+}
+
+footer p {
+    width: 100%;
+}
+
+
+.search-form {
     margin-top: 5em;
     padding: .8em 1em;
     text-align: center;
 }
+
 .search-form label {
     text-align: left;
     margin-left: .9em;
 }
 
-
 .welcome-form {
     margin-top: 1em;
 }
 
+.help,
 .intro {
     padding: .5em 1em;
     margin-top: 5em;
     position: relative;
 }
 
-footer {
-    position: fixed;
-    bottom: 5%;
-    left: 10%;
+.help h2 {
+    margin-left: 1em;
+
+}
+
+.help p {
+    margin-top: 1em;
+}
+
+.help button {
+    float: right;
+    margin: .5em 2em;
+    background: black;
+    color: white;
+    padding: 1em;
+    border-radius: 3px;
+}
+
+h2:nth-child(even) {
+    display: inline-block;
+}
+
+.steps,
+.permissions {
+    width: 80%;
     text-align: center;
-    padding: 0 .6em;
+    margin: auto;
+    border: 1px solid black;
+    table-layout: fixed;
+    background-color: white;
+    margin-bottom: 2em;
+}
+
+.intro td {
+    padding: .4em;
+}
+
+.list-results td {
+    padding: .2em .5em;
+    border-bottom: 1px solid black;
+}
+
+.steps td:nth-child(2) {
+    width: auto;
+}
+
+.steps td:nth-child(1) {
+    width: 20%;
+    background: #c7b198;
+}
+
+.permissions th:nth-child(2) {
+    font-size: .9em;
+}
+
+.permissions th {
+    background: #363434;
+    padding: .7em .1em;
+    color: white;
+    border: none;
+}
+
+.permissions tr:nth-child(even) {
+    background: #c7b198;
+}
+
+.no-padding {
+    padding: 0 0 1em 0;
+}
+
+.wide {
+    width: 100%;
+}
+
+.up {
+    margin-top: 3.7em
 }
 
 form label {
-    color: black;
+    color:black;
     font-size: 1.1em;
     display: block;
     font-weight: bold;
@@ -87,18 +209,25 @@ form label {
 form input {
     border: none;
     padding: 0.45em 0.2em;
-    width: 45%;
+    width: 100%;
     color: black;
     border-bottom: 2px solid black;
     transition: border-bottom 0.15s linear 0.25s;
 }
 
-input:hover, input:focus {
+form input[type="checkbox"] {
+    width: 10%;
+}
+
+input:hover,
+input:focus {
     border-bottom: 4px solid black;
     outline: none;
 }
 
-#name, #email, #employerName {
+#name,
+#email,
+#employerName {
     width: 90%;
 }
 
@@ -117,24 +246,31 @@ legend {
     font-size: 2em;
 }
 
-.signup-form, .login-form {
-    
-    font-size: 1.2em;
+.signup-form,
+.login-form {
+
+    font-size: 1em;
     padding: 1em;
 }
 
 .signup-form {
-    margin-top: 5.5em;
+    margin-top: 4.5em;
 }
 
 .login-form {
     margin-top: 6em;
 }
 
+.signup-form legend {
+    font-size: 1.8em;
+}
+
 .create-form {
     margin-top: 5em;
-    padding-bottom: 1em;
+    padding: 1em;
     border: 2px solid black;
+    background: white;
+    color: black;
 }
 
 .employee-form legend {
@@ -144,28 +280,29 @@ legend {
 
 .employee-form label {
     display: inline-block;
+    width: 100%;
+    margin-top: 1em;
 }
 
-.employee-form input {
-    width: 35%;
-}
+
 
 #vehicle {
     width: 15%;
 }
 
-.employee-form button {
+.buttons button {
     margin-top: 2em;
+    background: #76b39d;
+    color: black;
+    border: 1px solid #003545;
+    font-size: 1.1em;
+    font-weight: bold;
 }
 
-.employee-form .update-btn {
-    float: left;
-    margin-left: 20%;
-}
-
-.employee-form .cancel-btn {
+form p {
+    margin: 0.5em;
     float: right;
-    margin-right: 20%;
+    width: auto;
 }
 
 .update-form {
@@ -177,19 +314,24 @@ legend {
 .login-form button {
     margin-left: auto;
     display: block;
-    margin-top: 1.5em;
+    margin-top: 1em;
 
 }
 
-.buttons {
-    margin-top: 2em;
+.signup-form a,
+.login-form a {
+    font-size: 1.1em;
+}
+
+.intro p {
+    width: 90%;
 }
 
 .buttons button {
     padding: .7em;
-    margin: 1em;
+    width: 80%;
 }
- 
+
 fieldset {
     border: 0;
 }
@@ -202,7 +344,7 @@ button {
     text-decoration: none;
 }
 
-form button{
+form button {
     transition: border 0.1s linear 0.2s, border-radius 0.1s linear 0.2s;
 }
 
@@ -210,34 +352,34 @@ form button {
     background-color: black;
     color: white;
     margin-left: 1.4em;
+    margin-top: .5em;
     padding: 1em;
-    border-radius: 4px;
+    border-radius: 1px;
 }
 
-form button:hover, form button:focus {
+form button:hover,
+form button:focus {
     border: 3px solid white;
     border-radius: 10px;
     outline: none;
-  
+
 }
 
 
 .below {
-      margin: 4em auto;
+    margin: 4em auto;
 }
 
 .results .delete-btn,
-.results .goto-edit,
-.info-window .confirm-btn,
-.info-window .close-btn {
+.results .goto-edit {
     margin-top: 1.5em;
     padding: .4em .6em;
-    background: white;
-    border-radius: 3px;
+    background: #76b39d;
+    border-radius: 2px;
+    border: 1px solid black;
 }
 
-.results .delete-btn,
-.info-window .confirm-btn {
+.results .delete-btn {
     float: right;
     margin-right: 15%;
 
@@ -250,27 +392,56 @@ form button:hover, form button:focus {
     overflow: auto;
 }
 
-.list {
+
+.info-window button {
+        background: #00454a;
+        color: white;
+        border: 1px solid #003545;
+        font-size: 1.1em;
+        width: 40%;
+}
+
+.info-window .close-btn {
+    color: black;
+    border: none;
+}
+
+.info-window button:nth-child(odd) {
+    float: right;
+    margin-right: .3em;
+}
+
+.info-window button:nth-child(even) {
+    float: left;
+    margin-left: .3em;
+}
+
+
+
+
+.list,
+.list-results {
     /* margin: 5em .5em; */
     margin: 5em auto;
 }
 
-.list {
+.list-results {
     width: 90%;
 }
 
-.list .goto-edit,
-.list .delete-btn {
-    background-color: white;
-    border-radius: 3px;
+.list-results .goto-edit,
+.list-results .delete-btn {
+    background-color: #76b39d;
+    border-radius: 1px;
     padding: .3em;
+    border: 1px solid black;
 }
 
-.list h1 {
-    text-shadow: 2px 3px black;
-    color: white;
+.list-results h1 {
+  
+    color: black;
     display: inline-block;
-    font-size: 1.9em;
+    font-size: 1.5em;
     margin: .5em;
 }
 
@@ -279,15 +450,10 @@ form button:hover, form button:focus {
     color: white;
 }
 
-.onTop {
-    position: fixed;
-    top: 15%;
-    right: 15%;
-}
-
 .whiteBack {
     background-color: white;
     color: black;
+    border: 1px solid black;
 }
 
 .goto-create {
@@ -296,83 +462,105 @@ form button:hover, form button:focus {
     background-color: white;
     padding: .5em;
     border-radius: 2px;
-    
+    border: 1px solid black;
 }
 
-
-
-
-
-
 .grid-container {
+    width: 80%;
+    margin-left: 10%;
     display: grid;
-    grid-gap: 1em;
-    grid-template-columns: auto auto;
+    grid-gap: 1.5em;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    justify-content: center;
     padding: .5em;
-    font-family: 'Rubik', sans-serif;
+    /* font-family: 'Rubik', sans-serif; */
 }
 
 .grid-item {
+    width: 250px;
     padding: .2em;
     text-align: center;
-    border-radius: 4px;
-    background-color:black;
-    color: #FFF8D8;
+    border-radius: 1px;
+    border: 2px solid black;
+    background-color: white;
+    color: black;
     transition: border-radius .2ms ease-in-out,
-    background-color .2ms ease-in-out,
-    color .2ms ease-in-out;
+        background-color .2ms ease-in-out,
+        color .2ms ease-in-out;
 }
 
-.grid-item:focus, 
+.grid-item:focus,
 .grid-item:hover {
     transform: scaleY(1);
     border-radius: 10px;
-    background-color: #FFF8D8;
-    color: black;
+    background-color: black;
+    color: #FFF8D8;
 }
 
 
 .grid-item ul {
-   margin: 0;
+    margin: 0;
 }
 
 .grid-item li {
     text-align: left;
 }
 
-/* .info-window {
-  background-color: black;
-  color: #f7f7f7;
-} */
-
 .results {
-  background-color: black;
-  color: #f7f7f7;
+    background-color: black;
+    color: #f7f7f7;
 }
 
-td {
+tr {
     width: 100%;
     border-bottom: 1px solid white;
     padding: .24em;
 }
+
 table {
     margin-top: 1em;
 }
 
 table tr:last-child {
     border-bottom: none;
-} 
+}
 
-.info-window, .results{
+.results {
+    position: relative;
+
+}
+
+.results td {
+    width: 100%;
+    border-bottom: 1px solid black;
+    padding: .3em;
+}
+
+.info-window {
     position: fixed;
+    background: #76b39d;
+}
+
+.list-results {
+    color: black;
+    border: 1px solid black;
+}
+
+.no-border {
+    border: none;
+}
+
+.info-window,
+.results {
+    margin-bottom: 2em;
     z-index: 1;
     left: 5%;
-    top: 9em;   /*employeeId result after list */
+    top: 5em;
     width: 90%;
-    font-family: 'Rubik',sans-serif;
-    max-height: 100%;
+    max-width: 500px;
+    min-width: 250px;
+    font-family: 'Rubik', sans-serif;
     padding: 2em 1.5em 1em;
-    overflow: auto;
     font-size: 1.1em;
     opacity: 0;
     border-radius: 3px;
@@ -382,7 +570,10 @@ table tr:last-child {
     transition: visibility 0.3s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
 
-.show-info-window, .results {
+
+
+.show-info-window,
+.results {
     opacity: 1;
     visibility: visible;
     transform: scale(1.0);
@@ -391,11 +582,26 @@ table tr:last-child {
 
 
 .results {
-    padding: 2em 1.5em;
+    padding: 2em 1.5em 3em 1.5em;
+    /*was 5 but results admin id from list*/
     top: 5em;
-    background-color: black;
-    color: #f7f7f7;
+    max-width: 550px;
+    min-width: 250px;
+    background-color: white;
+    color: black;
     /* display: inline-block; */
+}
+
+
+
+.onTop {
+    position: absolute;
+    top: 15%;
+    right: 15%;
+}
+
+select {
+    width: 100%;
 }
 
 .info-window h1,
@@ -408,29 +614,40 @@ table tr:last-child {
 }
 
 .warn {
-    border: 2px solid #E81D2E;
-    background-color: #E81D2E;
-    text-align: center;
+        background-color: white;
+        color: #E81D2E;
+        text-align: center;
+        font-size: 3em;
+        margin: 0;
 }
 
 .enter {
-    border: 2px solid #12BF28;
-    background-color: #12BF28;
+    background-color: white;
+    color: #04BF45;
     text-align: center;
+    font-size: 3em;
+    margin: 0;
 }
 
-.close, .clear {
+.close,
+.clear {
     float: right;
     font-size: 1.2em;
     text-decoration: none;
     cursor: pointer;
     border: none;
+
+}
+
+.info-window .close {
+    background: #76b39d;
 }
 
 .clear {
-    color: white;
-    background: black; 
+    color: black;
+    background: white;
 }
+
 
 .close:hover,
 .close:focus {
@@ -439,56 +656,84 @@ table tr:last-child {
     cursor: pointer;
 }
 
-.loader {
-    margin: .5em auto;
-    border: .42em solid lightgray;
-    border-top: .42em solid #f9f920;
-    border-radius: 50%;
-    width: 2.1em;
-    height: 2.1em;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-}
-
-@-webkit-keyframes spin {
-    0% {
-        -webkit-transform: rotate(0deg);
-    }
-
-    100% {
-        -webkit-transform: rotate(360deg);
-    }
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
 .tooltip {
     position: relative;
     display: inline-block;
-  
+
 }
 
 .tooltip .tooltiptext {
-        visibility: hidden;
-        width: 200px;
-        background-color: white;
-        color: black;
-        text-align: center;
-        padding: .5em;
-        border: 1px solid black;
-        border-radius: 4px;
-        position: absolute;
-        left: -80%;
-        z-index: 1;
+    visibility: hidden;
+    width: 200px;
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding: .5em;
+    border: 1px solid black;
+    border-radius: 4px;
+    position: absolute;
+    left: -80%;
+    z-index: 1;
 }
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
+}
+
+.hide-it {
+    display: none;
+}
+
+.info-container p:first-child {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+@media (min-width: 550px) {
+
+    .results {
+        padding: 0;
+        top: 11em;
+        left: 15%;
+    }
+
+    .employee-form,
+    .info-container {
+        margin: auto;
+        width: 70%;
+    }
+
+    img {
+        position: relative;
+    }
+    .info-container p:first-child {
+        position: absolute;
+        left: 6%;
+        top: 0%;
+        width: 40%;
+        font-family: 'Francois One',
+            sans-serif;
+        font-size: 1.9em;
+    }
+    
+
+}
+
+@media (min-width: 800px) {
+
+    .results {
+        padding: 0;
+        top: 11em;
+        left: 15%;
+    }
+
+    .info-container p:first-child {
+       
+        left: 10%;
+        top: 1%;
+       
+        font-size: 2.2em;
+
+    }
+
 }
